--- a/diplom/flask_app/templates/register.html
+++ b/diplom/flask_app/templates/register.html
@@ -19,6 +19,6 @@
         <input type="submit" value="Зарегистрироваться">
     </form>
     <br>
-    <a href="{{ url_for('home') }}">Назад на главную</a>
+    <a href="{{ url_for('home') }}">Назад на главную</a><
 </body>
 </html>
