--- a/diplom/urbanuniversity/templates/base.html
+++ b/diplom/urbanuniversity/templates/base.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Создание задачи</title>
+    <title>Список задач</title>
 </head>
 <body>
-    <h1>Создание задачи</h1>
+    <h1>Список задач</h1>
     <div>
         {% block content %}{% endblock %}
     </div>
